[package]
name = "ostn15_phf"
description = "A PHF map of the OSTN15 grid shifts for use in transforming ETRS89 grid coordinates to OSGB36"
repository = "https://github.com/urschrei/OSTN15_PHF"
documentation = "https://urschrei.github.io/ostn15_phf/"
keywords = ["Geo", "ETRS89", "OSGB36", "OSTN02", "OSTN15"]
version = "1.2.3"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "BlueOak-1.0.0"
readme = "README.md"
edition = "2024"

[build-dependencies]
lzma-rust2 = { version = "0.15", default-features = false, features = [
    "std",
    "xz",
] }
phf_codegen = "=0.13.1"

[dependencies]
phf = "=0.13.1"
libc = "0.2.177"

[lib]
name = "ostn15_phf"
crate-type = ["rlib", "cdylib"]

# Speed up map compilation in debug builds.
[profile.dev.package.phf]
opt-level = 3

# Optimise map-generating build script & phf_codegen.
[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

# dev-level of codegen units for build script & phf_codegen, to increase
# compilation speed, since it doesn't affect the speed of the built library.
[profile.release.build-override]
codegen-units = 256
